--- a/data/contract_config.json
+++ b/data/contract_config.json
@@ -22,6 +22,14 @@
         "events": null,
         "chain": "mainnet"
     },
+    "dydx-merkle-distributor": {
+        "address": "0x01d3348601968ab85b4bb028979006eac235a588",
+        "start": 12931482,
+        "decimals": 18,
+        "events": null,
+        "abi-proxy": "0xfe1d5439625a9524a80f66670733129e80e0c112",
+        "chain": "mainnet"
+    },
     "compound": {
         "address": "0xc00e94cb662c3520282e6f5717214004a7f26888",
         "start": 9601359,
